Fixes in messages

--- a/Kitodo/src/main/webapp/pages/help.xhtml
+++ b/Kitodo/src/main/webapp/pages/help.xhtml
@@ -22,10 +22,9 @@
 
     <ui:define name="pageTabView">
         <p:tabView>
-            <p:tab title="#{msgs.bedienungshinweise}">
+            <p:tab title="#{msgs.userInstruction}">
                 <p:panel styleClass="text-align: justify;">
-                    <h:outputText styleClass="text-align: justify;"
-                                  value="#{msgs.bedienungshinweiseText}" escape="false"/>
+                    <h:outputText styleClass="text-align: justify;" value="#{msgs.userInstructionText}" escape="false"/>
                 </p:panel>
             </p:tab>
         </p:tabView>
