--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -71,7 +71,7 @@
                     </div>
 
                     <h:panelGroup rendered="#{LoginForm.myBenutzer == null and LoginForm.alreadyLoggedIn}">
-                        <h:outputText value="#{msgs.sieSindBereitsEingeloggt}"/>
+                        <h:outputText value="#{msgs.alreadyLoggedIn}"/>
                         <br/>
                     </h:panelGroup>
                 </sec:authorize>
