--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -58,10 +58,10 @@
             <p:tab title="#{msgs.details}">
                 <ui:include src="/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.technischeDaten}">
+            <p:tab title="#{msgs.technicalData}">
                 <ui:include src="/WEB-INF/templates/includes/projectEdit/projectEditSpecification.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.metsParamater}">
+            <p:tab title="#{msgs.metsParameter}">
                 <ui:include src="/WEB-INF/templates/includes/projectEdit/projectEditMets.xhtml"/>
             </p:tab>
         </p:tabView>
