--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -37,8 +37,7 @@
         <h3>
             <h:outputText value="#{msgs.userGroupEdit} (#{BenutzergruppenForm.userGroup.title})"
                           rendered="#{isEditMode}"/>
-            <h:outputText value="#{msgs.neueBenutzergruppeAnlegen}"
-                          rendered="#{isCreateMode}"/>
+            <h:outputText value="#{msgs.createNewUserGroup}" rendered="#{isCreateMode}"/>
             <h:outputText value="#{msgs.userGroupView} (#{BenutzergruppenForm.userGroup.title})"
                           rendered="#{isViewMode}"/>
         </h3>
