--- a/Kitodo/src/main/webapp/pages/massImport2.xhtml
+++ b/Kitodo/src/main/webapp/pages/massImport2.xhtml
@@ -28,7 +28,7 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3>
-            <h:outputText value="#{msgs.massImport} (#{msgs.prozessvorlage}: '#{MassImportForm.template.title}')"/>
+            <h:outputText value="#{msgs.massImport} (#{msgs.template}: '#{MassImportForm.template.title}')"/>
         </h3>
         <p:commandButton id="save" value="#{msgs.save}"
                          action="#{MassImportForm.convertData}"
