--- a/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
@@ -55,7 +55,7 @@
                          update="save"
                          style="display:none;"/>
         <p:button value="#{msgs.cancel}" onclick="setConfirmUnload(false);"
-                  outcome="projects.jsf?id=#{ProjekteForm.activeTabIndex}"
+                  outcome="projects.jsf?id=#{ProjectForm.activeTabIndex}"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary"/>
     </ui:define>
 
