--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -50,7 +50,7 @@
                          style="display:none;"/>
         <p:button id="cancel" value="#{msgs.cancel}"
                   onclick="setConfirmUnload(false);"
-                  outcome="projects.jsf?id=#{ProjekteForm.activeTabIndex}"
+                  outcome="projects.jsf?id=#{ProjectForm.activeTabIndex}"
                   icon="fa fa-times fa-lg" iconPos="right"
                   styleClass="secondary"/>
     </ui:define>
