--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -21,7 +21,7 @@
         <h:body>
             <!-- edit dialog -->
             <p:dialog widgetVar="editFolderDialog"
-                      header="#{empty ProjekteForm.myFolder.path ? msgs['editFolderDialog.caption.add'] : msgs['editFolderDialog.caption.edit']}"
+                      header="#{empty ProjectForm.myFolder.path ? msgs['editFolderDialog.caption.add'] : msgs['editFolderDialog.caption.edit']}"
                       width="700px"
                       modal="true"
                       dynamic="true"
@@ -31,21 +31,21 @@
                         <p:row>
                             <p:column colspan="2">
                                 <p:outputLabel for="path" value="#{msgs['editFolderDialog.path']}"/>
-                                <p:inputText id="path" value="#{ProjekteForm.myFolder.path}" styleClass="input editDialog"/>
+                                <p:inputText id="path" value="#{ProjectForm.myFolder.path}" styleClass="input editDialog"/>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column colspan="2">
                                 <p:outputLabel for="mimeType" value="#{msgs['editFolderDialog.mimeType']}"/>
-                                <p:selectOneMenu id="mimeType" value="#{ProjekteForm.myFolder.mimeType}" styleClass="input editDialog">
-                                    <f:selectItems value="#{ProjekteForm.mimeTypes}" />
+                                <p:selectOneMenu id="mimeType" value="#{ProjectForm.myFolder.mimeType}" styleClass="input editDialog">
+                                    <f:selectItems value="#{ProjectForm.mimeTypes}" />
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column colspan="2">
                                <p:outputLabel for="createFolder" value="#{msgs['editFolderDialog.createFolder']}" />
-                               <p:selectBooleanCheckbox id="createFolder" class="input" value="#{ProjekteForm.myFolder.createFolder}">
+                               <p:selectBooleanCheckbox id="createFolder" class="input" value="#{ProjectForm.myFolder.createFolder}">
                                    <p:ajax event="change" oncomplete="toggleSave()" />
                                </p:selectBooleanCheckbox>
                             </p:column>
@@ -53,7 +53,7 @@
                         <p:row>
                             <p:column>
                                 <p:outputLabel for="generator" value="#{msgs['editFolderDialog.generator']}"/>
-                                <p:selectOneMenu id="generator" value="#{ProjekteForm.myFolder.generator.method}">
+                                <p:selectOneMenu id="generator" value="#{ProjectForm.myFolder.generator.method}">
                                     <f:selectItem itemLabel="" itemValue="" />
                                     <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.dpi']}" itemValue="changeDpi" />
                                     <f:selectItem itemLabel="#{msgs['editFolderDialog.generator.derivative']}" itemValue="createDerivative" />
@@ -64,26 +64,26 @@
                             </p:column>
                             <p:column>
                                 <p:outputLabel for="dpi" value="#{msgs['editFolderDialog.dpi']}"
-                                    rendered="#{ProjekteForm.myFolder.generator.method == 'changeDpi'}"/>
+                                    rendered="#{ProjectForm.myFolder.generator.method == 'changeDpi'}"/>
                                 <p:outputLabel for="factor" value="#{msgs['editFolderDialog.derivative']}"
-                                    rendered="#{ProjekteForm.myFolder.generator.method == 'createDerivative'}"/>
+                                    rendered="#{ProjectForm.myFolder.generator.method == 'createDerivative'}"/>
                                 <p:outputLabel for="factor" value="#{msgs['editFolderDialog.imageScale']}"
-                                    rendered="#{ProjekteForm.myFolder.generator.method =='getScaledWebImage'}"/>
+                                    rendered="#{ProjectForm.myFolder.generator.method =='getScaledWebImage'}"/>
                                 <p:outputLabel for="width" value="#{msgs['editFolderDialog.imageSize']}"
-                                    rendered="#{ProjekteForm.myFolder.generator.method == 'getSizedWebImage'}"/>
-                                <p:inputNumber id="dpi" value="#{ProjekteForm.myFolder.generator.dpi}" decimalPlaces="0" symbol=" DPI" symbolPosition="s"
-                                    rendered="#{ProjekteForm.myFolder.generator.method == 'changeDpi'}" styleClass="input editDialog"/>
-                                <p:inputNumber id="factor" value="#{ProjekteForm.myFolder.generator.factor}" decimalPlaces="1" symbol="%" symbolPosition="s"
-                                    rendered="#{ProjekteForm.myFolder.generator.method == 'createDerivative' or ProjekteForm.myFolder.generator.method == 'getScaledWebImage'}"
+                                    rendered="#{ProjectForm.myFolder.generator.method == 'getSizedWebImage'}"/>
+                                <p:inputNumber id="dpi" value="#{ProjectForm.myFolder.generator.dpi}" decimalPlaces="0" symbol=" DPI" symbolPosition="s"
+                                    rendered="#{ProjectForm.myFolder.generator.method == 'changeDpi'}" styleClass="input editDialog"/>
+                                <p:inputNumber id="factor" value="#{ProjectForm.myFolder.generator.factor}" decimalPlaces="1" symbol="%" symbolPosition="s"
+                                    rendered="#{ProjectForm.myFolder.generator.method == 'createDerivative' or ProjectForm.myFolder.generator.method == 'getScaledWebImage'}"
                                     styleClass="input editDialog"/>
-                                <p:inputNumber id="width" value="#{ProjekteForm.myFolder.generator.width}" decimalPlaces="0" symbol=" px" symbolPosition="s"
-                                    rendered="#{ProjekteForm.myFolder.generator.method == 'getSizedWebImage'}" styleClass="input editDialog"/>
+                                <p:inputNumber id="width" value="#{ProjectForm.myFolder.generator.width}" decimalPlaces="0" symbol=" px" symbolPosition="s"
+                                    rendered="#{ProjectForm.myFolder.generator.method == 'getSizedWebImage'}" styleClass="input editDialog"/>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column style="width:50%">
                                 <p:outputLabel for="linkingMode" value="#{msgs['editFolderDialog.linkingMode']}"/>
-                                <p:selectOneMenu id="linkingMode" value="#{ProjekteForm.myFolder.linkingMode}">
+                                <p:selectOneMenu id="linkingMode" value="#{ProjectForm.myFolder.linkingMode}">
                                     <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.ALL']}" itemValue="ALL" />
                                     <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.EXISTING']}" itemValue="EXISTING" />
                                     <f:selectItem itemLabel="#{msgs['editFolderDialog.linkingMode.NO']}" itemValue="NO" />
@@ -92,27 +92,27 @@
                             </p:column>
                             <p:column style="width:50%">
                                 <p:outputLabel for="fileGroup" value="#{msgs['editFolderDialog.fileGroup']}"/>
-                                <p:selectOneMenu id="fileGroup" value="#{ProjekteForm.myFolder.fileGroup}" effect="fold" editable="true">
-                                    <f:selectItems value="#{ProjekteForm.myFolder.fileGroups}" />
+                                <p:selectOneMenu id="fileGroup" value="#{ProjectForm.myFolder.fileGroup}" effect="fold" editable="true">
+                                    <f:selectItems value="#{ProjectForm.myFolder.fileGroups}" />
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column colspan="2">
                                 <p:outputLabel for="urlStructure" value="#{msgs['editFolderDialog.urlStructure']}"/>
-                                <p:inputText id="urlStructure" value="#{ProjekteForm.myFolder.urlStructure}" styleClass="input editDialog"/>
+                                <p:inputText id="urlStructure" value="#{ProjectForm.myFolder.urlStructure}" styleClass="input editDialog"/>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column>
                                 <p:outputLabel for="copyFolder" value="#{msgs['editFolderDialog.copyFolder']}" />
-                                <p:selectBooleanCheckbox id="copyFolder" class="input" value="#{ProjekteForm.myFolder.copyFolder}">
+                                <p:selectBooleanCheckbox id="copyFolder" class="input" value="#{ProjectForm.myFolder.copyFolder}">
                                     <p:ajax event="change" oncomplete="toggleSave()" />
                                 </p:selectBooleanCheckbox>
                             </p:column>
                         </p:row>
                     </p:panelGrid>
-                    <p:commandButton action="#{ProjekteForm.saveFolder()}"
+                    <p:commandButton action="#{ProjectForm.saveFolder()}"
                                      update="editForm"
                                      oncomplete="PF('editFolderDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
