--- a/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
@@ -46,7 +46,7 @@
                          update="save"
                          style="display:none;"/>
         <p:button value="#{msgs.cancel}"
-                  outcome="projects.jsf?id=#{ProjekteForm.activeTabIndex}"
+                  outcome="projects.jsf?id=#{ProjectForm.activeTabIndex}"
                   onclick="setConfirmUnload(false);"
                   icon="fa fa-times fa-lg"
                   iconPos="right"
