--- a/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
@@ -56,7 +56,7 @@
                          update="saveButton"
                          style="display:none;"/>
         <p:button id="cancel" value="#{msgs.cancel}"
-                  outcome="users.jsf?id=#{BenutzerverwaltungForm.activeTabIndex}" onclick="setConfirmUnload(false);"
+                  outcome="users.jsf?id=#{UserForm.activeTabIndex}" onclick="setConfirmUnload(false);"
                   icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
     </ui:define>
 
