--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -19,13 +19,13 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{BenutzerverwaltungForm.loadUserObject(id)}"/>
+        <f:viewAction action="#{UserForm.loadUserObject(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{BenutzerverwaltungForm.userObject.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditUser(id)}"/>
+              value="#{UserForm.userObject.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditUser(id)}"/>
     <ui:param name="isCreateMode"
-              value="#{BenutzerverwaltungForm.userObject.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUser')}"/>
+              value="#{UserForm.userObject.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUser')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
@@ -35,7 +35,7 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3>
-            <h:outputText value="#{msgs.userEdit} (#{BenutzerverwaltungForm.userObject.fullName})"
+            <h:outputText value="#{msgs.userEdit} (#{UserForm.userObject.fullName})"
                           rendered="#{isEditMode}"/>
             <h:outputText value="#{msgs.userCreate}"
                           rendered="#{isCreateMode}"/>
@@ -43,17 +43,17 @@
                           rendered="#{isViewMode}"/>
         </h3>
         <p:commandButton value="#{msgs.save}"
-                         action="#{BenutzerverwaltungForm.save}"
+                         action="#{UserForm.save}"
                          id="save"
                          rendered="#{isEditMode || isCreateMode}"
                          widgetVar="save"
                          update="notifications"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
-                         disabled="#{BenutzerverwaltungForm.saveDisabled}"
+                         disabled="#{UserForm.saveDisabled}"
                          onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.userSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"/>
         <p:commandButton id="saveButtonToggler"
-                         actionListener="#{BenutzerverwaltungForm.setSaveDisabled(false)}"
+                         actionListener="#{UserForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
         <p:button id="cancel" value="#{msgs.cancel}" outcome="users" onclick="setConfirmUnload(false);"
@@ -67,45 +67,32 @@
                     <p:row>
                         <div>
                             <p:outputLabel for="surname" value="#{msgs.surname}"/>
-                            <p:inputText id="surname"
-                                         class="input"
-                                         disabled="#{isViewMode}"
-                                         placeholder="#{msgs.surname}"
-                                         value="#{BenutzerverwaltungForm.userObject.surname}"
+                            <p:inputText id="surname" class="input" disabled="#{isViewMode}"
+                                         placeholder="#{msgs.surname}" value="#{UserForm.userObject.surname}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="firstName" value="#{msgs.firstName}"/>
-                            <p:inputText id="firstName"
-                                         class="input"
-                                         disabled="#{isViewMode}"
-                                         placeholder="#{msgs.firstName}"
-                                         value="#{BenutzerverwaltungForm.userObject.name}"
+                            <p:inputText id="firstName" class="input" disabled="#{isViewMode}"
+                                         placeholder="#{msgs.firstName}" value="#{UserForm.userObject.name}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="location" value="#{msgs.location}"/>
-                            <p:inputText id="location"
-                                         class="input"
-                                         disabled="#{isViewMode}"
-                                         placeholder="#{msgs.location}"
-                                         value="#{BenutzerverwaltungForm.userObject.location}"
+                            <p:inputText id="location" class="input" disabled="#{isViewMode}"
+                                         placeholder="#{msgs.location}" value="#{UserForm.userObject.location}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="ldapLogin" value="#{msgs.ldaplogin}"/>
-                            <p:inputText id="ldapLogin"
-                                         class="input"
-                                         disabled="#{isViewMode}"
-                                         placeholder="#{msgs.ldaplogin}"
-                                         onchange="toggleSave()"
-                                         value="#{BenutzerverwaltungForm.userObject.ldapLogin}"/>
+                            <p:inputText id="ldapLogin" class="input" disabled="#{isViewMode}"
+                                         placeholder="#{msgs.ldaplogin}" onchange="toggleSave()"
+                                         value="#{UserForm.userObject.ldapLogin}"/>
                         </div>
                         <div>
                             <p:outputLabel for="ldapGroup" value="#{msgs.ldapGroup}"/>
-                            <p:selectOneMenu id="ldapGroup"  value="#{BenutzerverwaltungForm.userObject.ldapGroup}"
-                                             disabled="#{isViewMode}"
-                                             converter="#{ldapGroupConverter}">
+                            <p:selectOneMenu id="ldapGroup"  value="#{UserForm.userObject.ldapGroup}"
+                                             disabled="#{isViewMode}" converter="#{ldapGroupConverter}">
                                 <f:selectItems value="#{LdapGruppenForm.ldapGroups}" var="ldapGroup"
                                                itemValue="#{ldapGroup}" itemLabel="#{ldapGroup.title}"/>
                                 <p:ajax event="change" oncomplete="toggleSave()"/>
@@ -115,56 +102,42 @@
                     <p:row>
                         <div>
                             <p:outputLabel for="login" value="#{msgs.login}"/>
-                            <p:inputText id="login"
-                                         class="input"
-                                         disabled="#{isViewMode}"
-                                         placeholder="#{msgs.login}"
-                                         value="#{BenutzerverwaltungForm.userObject.login}"
-                                         readonly="#{BenutzerverwaltungForm.userObject.id ne null}"
+                            <p:inputText id="login" class="input" disabled="#{isViewMode}" placeholder="#{msgs.login}"
+                                         value="#{UserForm.userObject.login}"
+                                         readonly="#{UserForm.userObject.id ne null}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="password" value="#{msgs.password}" rendered="#{isCreateMode}"/>
-                            <p:password id="password"
-                                        class="input"
-                                        rendered="#{isCreateMode}"
-                                        placeholder="#{msgs.password}"
-                                        value="#{BenutzerverwaltungForm.password}"
-                                        onchange="toggleSave()"
-                                        required="#{empty param['editForm:saveButtonToggler']}"
+                            <p:password id="password" class="input" rendered="#{isCreateMode}"
+                                        placeholder="#{msgs.password}" value="#{UserForm.password}"
+                                        onchange="toggleSave()" required="#{empty param['editForm:saveButtonToggler']}"
                                         redisplay="true"/>
                         </div>
                         <div>
                             <p:outputLabel for="metaDataLanguage" value="#{msgs.metadataLanguage}"/>
-                            <p:inputText id="metaDataLanguage"
-                                         class="input"
-                                         disabled="#{isViewMode}"
+                            <p:inputText id="metaDataLanguage" class="input" disabled="#{isViewMode}"
                                          placeholder="#{msgs.metadataLanguage}"
-                                         value="#{BenutzerverwaltungForm.userObject.metadataLanguage}"
+                                         value="#{UserForm.userObject.metadataLanguage}"
                                          onchange="toggleSave()"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
                             <p:outputLabel for="withMassDownload" value="#{msgs.massDownload}"/>
-                            <p:selectBooleanCheckbox id="withMassDownload"
-                                                     styleClass="input"
-                                                     disabled="#{isViewMode}"
-                                                     value="#{BenutzerverwaltungForm.userObject.withMassDownload}"
+                            <p:selectBooleanCheckbox id="withMassDownload" styleClass="input" disabled="#{isViewMode}"
+                                                     value="#{UserForm.userObject.withMassDownload}"
                                                      onchange="toggleSave()"/>
                         </div>
                         <div>
                             <p:outputLabel for="active" value="#{msgs.isActive}"/>
-                            <p:selectBooleanCheckbox id="active"
-                                                     styleClass="input"
-                                                     disabled="#{isViewMode}"
-                                                     value="#{BenutzerverwaltungForm.userObject.active}"
-                                                     onchange="toggleSave()"/>
+                            <p:selectBooleanCheckbox id="active" styleClass="input" disabled="#{isViewMode}"
+                                                     value="#{UserForm.userObject.active}" onchange="toggleSave()"/>
                         </div>
                     </p:row>
                 </p:panelGrid>
                 <div>
                     <p:commandButton id="writUserToLdapButton"
-                                     action="#{BenutzerverwaltungForm.writeUserAtLdapServer}"
+                                     action="#{UserForm.writeUserAtLdapServer}"
                                      value="#{msgs.ldapKonfigurationSchreiben}"
                                      icon="fa fa-user-plus fa-lg"
                                      immediate="true"
@@ -184,14 +157,14 @@
             </p:tab>
             <!-- user groups -->
             <p:tab id="usergroupTab" title="#{msgs.userGroups}">
-                <p:dataTable id="usergroupDatatable" var="item" value="#{BenutzerverwaltungForm.userObject.userGroups}">
+                <p:dataTable id="usergroupDatatable" var="item" value="#{UserForm.userObject.userGroups}">
                     <p:column headerText="#{msgs.userGroup}">
                         <h:outputText value="#{item.title}"/>
                     </p:column>
                     <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                         <p:commandLink id="deleteFromUserGroup"
                                        rendered="#{isEditMode || isCreateMode}"
-                                       action="#{BenutzerverwaltungForm.deleteFromGroup}"
+                                       action="#{UserForm.deleteFromGroup}"
                                        title="#{msgs.ausGruppeLoeschen}"
                                        immediate="true"
                                        oncomplete="toggleSave()"
@@ -213,13 +186,13 @@
             </p:tab>
             <!-- projects -->
             <p:tab id="projectTab" title="#{msgs.projectList}">
-                <p:dataTable id="projectDatatable" var="item" value="#{BenutzerverwaltungForm.userObject.projects}">
+                <p:dataTable id="projectDatatable" var="item" value="#{UserForm.userObject.projects}">
                     <p:column headerText="#{msgs.projectList}">
                         <h:outputText value="#{item.title}"/>
                     </p:column>
                     <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                         <p:commandLink id="deleteFromProject"
-                                       action="#{BenutzerverwaltungForm.deleteFromProject}"
+                                       action="#{UserForm.deleteFromProject}"
                                        title="#{msgs.deleteFromProject}"
                                        immediate="true"
                                        oncomplete="toggleSave()"
@@ -241,13 +214,13 @@
             </p:tab>
             <!-- clients -->
             <p:tab id="clientTab" title="#{msgs.clientList}">
-                <p:dataTable id="clientDatatable" var="client" value="#{BenutzerverwaltungForm.userObject.clients}">
+                <p:dataTable id="clientDatatable" var="client" value="#{UserForm.userObject.clients}">
                     <p:column headerText="#{msgs.clientList}">
                         <h:outputText value="#{client.name}"/>
                     </p:column>
                     <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                         <p:commandLink id="deleteFromClient"
-                                       action="#{BenutzerverwaltungForm.deleteFromClient}"
+                                       action="#{UserForm.deleteFromClient}"
                                        title="#{msgs.clientDeleteFrom}"
                                        immediate="true"
                                        oncomplete="toggleSave()"
