--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -19,13 +19,13 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{BenutzergruppenForm.loadUserGroup(id)}"/>
+        <f:viewAction action="#{UserGroupForm.loadUserGroup(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{BenutzergruppenForm.userGroup.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditUserGroup(id)}"/>
+              value="#{UserGroupForm.userGroup.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditUserGroup(id)}"/>
     <ui:param name="isCreateMode"
-              value="#{BenutzergruppenForm.userGroup.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUserGroup')}"/>
+              value="#{UserGroupForm.userGroup.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUserGroup')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
@@ -35,17 +35,17 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3>
-            <h:outputText value="#{msgs.userGroupEdit} (#{BenutzergruppenForm.userGroup.title})"
+            <h:outputText value="#{msgs.userGroupEdit} (#{UserGroupForm.userGroup.title})"
                           rendered="#{isEditMode}"/>
             <h:outputText value="#{msgs.createNewUserGroup}" rendered="#{isCreateMode}"/>
-            <h:outputText value="#{msgs.userGroupView} (#{BenutzergruppenForm.userGroup.title})"
+            <h:outputText value="#{msgs.userGroupView} (#{UserGroupForm.userGroup.title})"
                           rendered="#{isViewMode}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
                          rendered="#{isEditMode || isCreateMode}"
                          value="#{msgs.save}"
-                         action="#{BenutzergruppenForm.save}"
+                         action="#{UserGroupForm.save}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
                          onclick="setConfirmUnload(false);PF('notifications').renderMessage({
@@ -54,9 +54,9 @@
                                         'severity':'info'});"
 
                          update="notifications"
-                         disabled="#{BenutzergruppenForm.saveDisabled}"/>
+                         disabled="#{UserGroupForm.saveDisabled}"/>
         <p:commandButton id="saveButtonToggler"
-                         actionListener="#{BenutzergruppenForm.setSaveDisabled(false)}"
+                         actionListener="#{UserGroupForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
         <p:button id="cancel"
@@ -75,11 +75,8 @@
                     <p:row>
                         <div>
                             <p:outputLabel for="titleInput" value="#{msgs.title}"/>
-                            <p:inputText id="titleInput"
-                                         class="input"
-                                         disabled="#{isViewMode}"
-                                         value="#{BenutzergruppenForm.userGroup.title}"
-                                         placeholder="#{msgs.title}"
+                            <p:inputText id="titleInput" class="input" disabled="#{isViewMode}"
+                                         value="#{UserGroupForm.userGroup.title}" placeholder="#{msgs.title}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                         <div>
@@ -95,7 +92,7 @@
                                                 filterMatchMode="contains"
                                                 responsive="true"
                                                 disabled="#{isViewMode}"
-                                                value="#{BenutzergruppenForm.globalAssignableAuthorities}"
+                                                value="#{UserGroupForm.globalAssignableAuthorities}"
                                                 converter="#{authorityConverter}"
                                                 var="authority"
                                                 itemLabel="#{authority.getTitleWithoutSuffix()}"
@@ -114,7 +111,7 @@
                                         <h:outputText value="#{msgs.authoritiesClient}"/>
                                     </h3>
                                     <p:pickList id="authoritiesClientPick"
-                                                value="#{BenutzergruppenForm.clientAssignableAuthorities}"
+                                                value="#{UserGroupForm.clientAssignableAuthorities}"
                                                 converter="#{authorityConverter}"
                                                 var="authority"
                                                 disabled="#{isViewMode}"
@@ -137,7 +134,7 @@
                                         <h:outputText value="#{msgs.authoritiesProject}"/>
                                     </h3>
                                     <p:pickList id="authoritiesProjectPick"
-                                                value="#{BenutzergruppenForm.projectAssignableAuthorities}"
+                                                value="#{UserGroupForm.projectAssignableAuthorities}"
                                                 converter="#{authorityConverter}"
                                                 showSourceFilter="true" showTargetFilter="true"
                                                 disabled="#{isViewMode}"
