Fix 'Cancel' link on taskEdit view

--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -44,7 +44,7 @@
                          update="save"
                          style="display:none;"/>
         <p:button id="cancel" value="#{msgs.cancel}"
-                  outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"
+                  outcome="processEdit?id=#{ProzessverwaltungForm.task.process.id}"
                   onclick="setConfirmUnload(false);"
                   icon="fa fa-times fa-lg"
                   iconPos="right"
