Fix processes page title

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -19,7 +19,7 @@
 
     <ui:define name="contentHeader">
         <h:outputScript name="js/filter.js" target="body" />
-            <h3>#{msgs.processManagement}</h3>
+            <h3>#{msgs.processes}</h3>
             <h:form id="addForm">
                 <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="callto">
                     <p:menuitem value="#{msgs.newBatch}" icon="ui-icon-plusthick" />
