Add option to display and edit TermsOfUse, DataPrivacy and Imprint texts

--- a/Kitodo/src/main/webapp/pages/system.xhtml
+++ b/Kitodo/src/main/webapp/pages/system.xhtml
@@ -33,6 +33,9 @@
             <p:tab id="taskManagerTab" title="#{msgs.taskManager}">
                 <ui:include src="/WEB-INF/templates/includes/system/taskmanager.xhtml" />
             </p:tab>
+            <p:tab id="termsTab" title="#{msgs.legal}">
+                <ui:include src="/WEB-INF/templates/includes/system/legalTextEditor.xhtml" />
+            </p:tab>
         </p:tabView>
     </ui:define>
 
