--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -12,11 +12,11 @@
 -->
 
 <ui:composition template="/WEB-INF/templates/base.xhtml"
-      xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:sec="http://www.springframework.org/security/tags"
-      >
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:sec="http://www.springframework.org/security/tags">
+
     <ui:define name="header">
         <div class="wrapper">
             <section id="portal-logo" class="login-screen">
