--- a/Kitodo/src/main/webapp/pages/massImport.xhtml
+++ b/Kitodo/src/main/webapp/pages/massImport.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{ProzessverwaltungForm.loadProcess(id)}" />
+        <f:viewAction action="#{ProcessForm.loadProcess(id)}" />
     </f:metadata>
 
     <ui:define name="contentHeader">
